test/expected/cast_pa.out
cast x into pointer to auto
                       ^
24: error: can not cast into "auto"
